--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   flame: ^1.21.0
   audioplayers: ^6.1.0
   sqflite: ^2.4.1
-  path_provider: ^2.1.5
   provider: ^6.1.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
