--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.14.1
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/launcher/birdie.png"
+  adaptive_icon_foreground: "assets/launcher/adaptive.png"
+  adaptive_icon_background: "#ffffff"
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
